Add header structure

--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
 </head>
 <body>
     <header>
-        Logo
+        <a href="index.html">
+            <h1 alt="Vintage Car Exhibition"> VCE </h1>
+        </a>
         <nav>
-            Navigation
+            <ul id="menu">
+                <li>
+                    <a href="" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="">Gallery</a>
+                </li>
+                <li>
+                    <a href="">Events</a>
+                </li>
+            </ul>
         </nav>
     </header>
     <section>
