Fix abbr for logo; Add style to header and nav

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <title>Vintage Car Exhibition</title>
 </head>
 <body>
+    <!-- Logo and Heading -->
     <header>
         <a href="index.html">
-            <h1 alt="Vintage Car Exhibition"> VCE </h1>
+            <h1 id="logo">
+                <abbr title="Vintage Car Exhibition">VCE</abbr>
+            </h1>
         </a>
         <nav>
             <ul id="menu">
