--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </ul>
         </nav>
     </header>
-    <section>
-        Main image, exhibition area
+    <section id=hero>
+        
     </section>
     <aside>
         Internal navigation links
