Add cover text and style; tweak header style

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
             </ul>
         </nav>
     </header>
-    <section id=hero>
-        
+    <section id="hero">
+        <div id="cover-text">
+            <h2>Vintage Cars</h2>
+        </div>
     </section>
     <aside>
         Internal navigation links
