--- a/index.html
+++ b/index.html
@@ -36,10 +36,15 @@
             <h2>Vintage Cars</h2>
         </div>
     </section>
-    <aside>
-        Internal navigation links
+    <aside id="local-nav">
+        <ul>
+            <li><a href="#menu">Top</a></li>
+            <li><a href="#intro">Intro</a></li>
+            <li><a href="#">History</a></li>
+            <li><a href="#">Social</a></li>
+        </ul>
     </aside>
-    <section>
+    <section id="intro">
         Introductory text
     </section>
     <section>
