Add Introductory text, style and embed yt video

--- a/index.html
+++ b/index.html
@@ -45,16 +45,19 @@
         </ul>
     </aside>
     <section id="intro">
-        Introductory text
+        <h2>Welcome to our vintage car exhibition portal</h2>
+        <p>We are proud to present our small but invaluable collection of one of the earliest
+            mass produced commercial vehicles.
+            Other than being retro, the driving experience greatly differs from today mainstream cars.
+        </p>
+        <p>Take a look at this quick take from bloomberg</p>
+        <iframe id="yt-video" src="https://www.youtube-nocookie.com/embed/MLMS_QtKamg?start=16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <section>
         History and timeline
         <article>
             Before cars
         </article>
-        <div>
-            Intro Video
-        </div>
         <article>
             Transition
         </article>
@@ -62,7 +65,7 @@
             Other details
         </article>
     </section>
-    <section>
+    <section id="address">
         Address, map, and quick nav links
     </section>
     <footer>
