feat(history): define basic structure

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ul>
             <li><a href="#menu">Top</a></li>
             <li><a href="#intro">Intro</a></li>
-            <li><a href="#">History</a></li>
+            <li><a href="#history-timeline">History</a></li>
             <li><a href="#">Social</a></li>
         </ul>
     </aside>
@@ -53,16 +53,35 @@
         <p>Take a look at this quick take from bloomberg</p>
         <iframe id="yt-video" src="https://www.youtube-nocookie.com/embed/MLMS_QtKamg?start=16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
-    <section>
-        History and timeline
+    <section id="history-timeline">
+        <h2>History and timeline</h2>
+        <!-- Emmet to describe current expected html structure: -->
+        <!-- article>(header>h3{subtitle})+(section>p{content}) -->
         <article>
-            Before cars
+            <header>
+                <h3>Before cars</h3>
+            </header>
+            <section>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi ducimus sit quo nesciunt possimus, reiciendis 
+                    earum magni placeat voluptate dolor, quaerat sed voluptas magnam quisquam quam repellat. Ducimus, assumenda ad!</p>
+            </section>
         </article>
         <article>
-            Transition
+            <header>
+                <h3>Transition</h3>
+            </header>
+            <section>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi cumque a voluptatem, ut, ullam distinctio, dolor 
+                    dolorum maxime minus aut consequatur? Laboriosam expedita ex temporibus debitis? Id, amet in? Temporibus!</p>
+            </section>
         </article>
         <article>
-            Other details
+            <header>
+                <h3>subtitle</h3>
+            </header>
+            <section>
+                <p>content</p>
+            </section>
         </article>
     </section>
     <section id="address">
