--- a/index.html
+++ b/index.html
@@ -85,7 +85,13 @@
         </article>
     </section>
     <section id="address">
-        Address, map, and quick nav links
+        <code>
+            <strong>Address:</strong><br>
+            <em>Ballybough Rd,<br>
+            Dublin, Ireland</em>
+        </code>
+        <!-- Embedded map from Google, with an imaginary address -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d607.6721570623787!2d-6.245479534081351!3d53.3596741714965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e60f64f8e19%3A0xa08cf78eff8de078!2sBallybough%20Rd%2C%20Ballybough%2C%20Dublin%2C%20Ireland!5e1!3m2!1sen!2suk!4v1634232912824!5m2!1sen!2suk" allowfullscreen="" loading="lazy"></iframe>        
     </section>
     <footer>
         Social media links
