feat: add font-awsome and social-network icons and links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li><a href="#menu">Top</a></li>
             <li><a href="#intro">Intro</a></li>
             <li><a href="#history-timeline">History</a></li>
-            <li><a href="#">Social</a></li>
+            <li><a href="#social-networks">Social</a></li>
         </ul>
     </aside>
     <section id="intro">
@@ -94,7 +94,30 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d607.6721570623787!2d-6.245479534081351!3d53.3596741714965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e60f64f8e19%3A0xa08cf78eff8de078!2sBallybough%20Rd%2C%20Ballybough%2C%20Dublin%2C%20Ireland!5e1!3m2!1sen!2suk!4v1634232912824!5m2!1sen!2suk" allowfullscreen="" loading="lazy"></iframe>        
     </section>
     <footer>
-        Social media links
+        <ul id="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-facebook-square"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://instagram.com" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-instagram-square"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://youtube.com" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-youtube-square"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://twitter.com" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-twitter-square"></i>
+                </a>
+            </li>
+        </ul>
     </footer>
+    <!-- Font Awsome -->
+    <script src="https://kit.fontawesome.com/a27400ecfe.js" crossorigin="anonymous"></script>
 </body>
 </html>
