--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Exhibition of the first mass produced Cars">
     <meta name="keywords" content="car exhibition, model t, ford, industrial revolution, replacing horses, historic cars">
+    <meta name="author" content="spanifer">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Vintage Car Exhibition</title>
@@ -31,11 +32,13 @@
             </ul>
         </nav>
     </header>
+    <!-- Hero image -->
     <section id="hero">
         <div id="cover-text">
             <h2>Vintage Cars</h2>
         </div>
     </section>
+    <!-- Local navigation links -->
     <aside id="local-nav">
         <ul>
             <li><a href="#menu">Top</a></li>
@@ -44,6 +47,7 @@
             <li><a href="#social-networks">Social</a></li>
         </ul>
     </aside>
+    <!-- Introduction content -->
     <section id="intro">
         <h2>Welcome to our vintage car exhibition portal</h2>
         <p>We are proud to present our small but invaluable collection of one of the earliest
@@ -53,6 +57,7 @@
         <p>Take a look at this quick take from bloomberg</p>
         <iframe id="yt-video" src="https://www.youtube-nocookie.com/embed/MLMS_QtKamg?start=16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
+    <!-- Historic timeline -->
     <section id="history-timeline">
         <h2>History and timeline</h2>
         <!-- Emmet to describe current expected html structure: -->
@@ -84,6 +89,7 @@
             </section>
         </article>
     </section>
+    <!-- Address and Map -->
     <section id="address">
         <code>
             <strong>Address:</strong><br>
@@ -93,6 +99,7 @@
         <!-- Embedded map from Google, with an imaginary address -->
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d607.6721570623787!2d-6.245479534081351!3d53.3596741714965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e60f64f8e19%3A0xa08cf78eff8de078!2sBallybough%20Rd%2C%20Ballybough%2C%20Dublin%2C%20Ireland!5e1!3m2!1sen!2suk!4v1634232912824!5m2!1sen!2suk" allowfullscreen="" loading="lazy"></iframe>        
     </section>
+    <!-- Social Networks -->
     <footer>
         <ul id="social-networks">
             <li>
