--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="" class="active">Home</a>
+                    <a href="index.html"  class="active">Home</a>
                 </li>
                 <li>
-                    <a href="">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="">Events</a>
+                    <a href="events.html">Events</a>
                 </li>
             </ul>
         </nav>
