Add events page, form-response page, and basic structure

--- a/handle-subscription.html
+++ b/handle-subscription.html
@@ -24,38 +24,18 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="gallery.html">Gallery</a>
+                    <a href="gallery.html" class="active">Gallery</a>
                 </li>
                 <li>
-                    <a href="events.html" class="active">Events</a>
+                    <a href="events.html">Events</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <!-- Upcoming events -->
-    <section id='event-cards'>
-        <!-- div>h3{eventName}+span{contactDetails}+span{clickToBook?} -->
-        <div>
-            <h3>eventName</h3>
-            <span>contactDetails</span><span>clickToBook?</span>
-        </div>
-    </section>
-    <!-- Event alert subscription form -->
-    <section>
-        <h2>Let us notify you when new events are available</h2>
-        <form action="handle-subscription.html" method="post">
-            <label for="name">Name</label>
-            <label for="email">Email</label>
-            <span>Please chose additional subscription option</span>
-            <label for="newsletter">Newsletter</label>
-            <label for="events">Events notification</label>
-            <span>You can chose to only receive notifications from your selected areas</span>
-            <label for="ireland"></label>
-            <label for="north"></label>
-            <label for="england"></label>
-        </form>
-    </section>
     <!-- Social Networks -->
+    <main>
+        <p>Received your request</p>
+    </main>
     <footer>
         <ul id="social-networks">
             <li>
