Add mstyle to events page

--- a/events.html
+++ b/events.html
@@ -34,33 +34,48 @@
     </header>
     <!-- Upcoming events -->
     <section id='event-cards'>
-        <!-- div>h3{eventName}+span{contactDetails}+span{clickToBook?} -->
+        <!-- div>h3{eventName}+span{contactDetails}+span.float-right{clickToBook?} -->
         <div>
             <h3>eventName</h3>
-            <span>contactDetails</span><span>clickToBook?</span>
+            <span>contactDetails</span><span class="float-right">clickToBook?</span>
+        </div>
+        <div>
+            <h3>eventName</h3>
+            <span>contactDetails</span><span class="float-right">clickToBook?</span>
         </div>
     </section>
-    <!-- Event alert subscription form -->
-    <section>
+    <!-- Event and newsletter subscription form -->
+    <section id="form">
         <h2>Let us notify you when new events are available</h2>
         <form action="handle-subscription.html" method="get">
-            <!-- For demonstration purpose a get method is used -->
-            <label for="name">Name</label>
-            <input type="text" name="name" id="name" minlength="2" maxlength="64" placeholder="or nick name" required>
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email" required>
-            <span>Please choose the subscription</span>
-            <label for="newsletter">Newsletter</label>
-            <input type="checkbox" name="newsletter" id="newsletter">
-            <label for="events">Events notification</label>
-            <input type="checkbox" name="events" id="events" checked>
-            <span>You can choose to receive notification from Ireland only</span>
-            <label for="all">All region</label>
-            <input type="radio" name="region" id="all" required>
-            <label for="ireland">Ireland only</label>
-            <input type="radio" name="region" id="ireland">
-            <input type="submit" value="Sign me up">
-            <input type="reset" value="Reset form to default">
+            <!-- Get method is used to demonstrate response to the form, a post request throws a server error as the server side response is not implemented -->
+            <fieldset>
+                <legend>Your details</legend>
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" minlength="2" maxlength="64" placeholder="or nick name"
+                    required>
+                <br>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" required>
+            </fieldset>
+            <fieldset>
+                <legend>Choose subscription</legend>
+                <label for="newsletter">Newsletter</label>
+                <input type="checkbox" name="newsletter" id="newsletter">
+                <label for="events">Events notification</label>
+                <input type="checkbox" name="events" id="events" checked>
+            </fieldset>
+            <fieldset>
+                <legend>Choose region</legend>
+                <label for="all">All region</label>
+                <input type="radio" name="region" id="all" required>
+                <label for="ireland">Ireland only</label>
+                <input type="radio" name="region" id="ireland">
+            </fieldset>
+            <div>
+                <input type="submit" value="Sign me up">
+                <input type="reset" value="Reset form to default" class="float-right">
+            </div>
         </form>
     </section>
     <!-- Social Networks -->
