Finetune style of event-cards

--- a/events.html
+++ b/events.html
@@ -33,17 +33,18 @@
         </nav>
     </header>
     <!-- Upcoming events -->
-    <section id='event-cards'>
+    <section id='event-cards-container'>
         <!-- div>h3{eventName}+span{contactDetails}+span.float-right{clickToBook?} -->
         <div>
             <h3>eventName</h3>
-            <span>contactDetails</span><span class="float-right">clickToBook?</span>
+            <span>contactDetails</span><span class="float-right">date</span>
         </div>
         <div>
             <h3>eventName</h3>
-            <span>contactDetails</span><span class="float-right">clickToBook?</span>
+            <span>contactDetails</span><span class="float-right">date</span>
         </div>
     </section>
+    <hr>
     <!-- Event and newsletter subscription form -->
     <section id="form">
         <h2>Let us notify you when new events are available</h2>
