--- a/handle-subscription.html
+++ b/handle-subscription.html
@@ -24,7 +24,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="gallery.html" class="active">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
                     <a href="events.html">Events</a>
