Add images and style to gallery and refactor header selector

--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,41 @@
             </ul>
         </nav>
     </header>
+    <!-- Gallery content -->
+    <section id="gallery-content">
+        <article>
+            <header>
+                <h2>Ford XY</h2>
+            </header>
+            <section>
+                <img src="assets/images/ford-1.jpg" alt="A gold and dark painted Ford Model-T, in natural light.">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut exercitationem adipisci consequatur, fuga laborum culpa
+                    commodi alias iure earum, tempore nobis veritatis consectetur ipsa? Reprehenderit delectus nesciunt modi at nobis!</p>
+            </section>
+        </article>
+        <hr class="mobile">
+        <article>
+            <header>
+                <h2>Ford XY</h2>
+            </header>
+            <section>
+                <img src="assets/images/ford-2.jpg" alt="Two seat green painted Ford Model-T, in natural light.">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa accusamus consequatur culpa magnam sit obcaecati laborum
+                    recusandae, eaque beatae dignissimos veniam asperiores aut? Sapiente, magnam harum. Ducimus soluta vel quis!</p>
+            </section>
+        </article>
+        <hr class="mobile">
+        <article>
+            <header>
+                <h2>Ford XY</h2>
+            </header>
+            <section>
+                <img src="assets/images/ford-1933-hotroad.jpg" alt="Black and white picture of a Ford hotroad without the bonnet.">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quaerat quae, tempora corrupti in molestias repellendus?
+                    Quod, error quos illo ipsa saepe odio quam cumque voluptate debitis et voluptatem modi!</p>
+            </section>
+        </article>
+    </section>
     <!-- Social Networks -->
     <footer>
         <ul id="social-networks">
