Refactor style and structure of main, hero-image and horizontal rule

--- a/events.html
+++ b/events.html
@@ -44,7 +44,7 @@
             <span>contactDetails</span><span class="float-right"><i class="far fa-calendar-check"></i>date</span>
         </div>
     </section>
-    <hr>
+    <hr class="hr-space">
     <!-- Event and newsletter subscription form -->
     <section>
         <h2>Let us notify you when new events are available</h2>
