--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
                     commodi alias iure earum, tempore nobis veritatis consectetur ipsa? Reprehenderit delectus nesciunt modi at nobis!</p>
             </section>
         </article>
-        <hr class="mobile">
+        <hr class="hr-default">
         <article>
             <header>
                 <h2>Ford XY</h2>
@@ -55,7 +55,7 @@
                     recusandae, eaque beatae dignissimos veniam asperiores aut? Sapiente, magnam harum. Ducimus soluta vel quis!</p>
             </section>
         </article>
-        <hr class="mobile">
+        <hr class="hr-default">
         <article>
             <header>
                 <h2>Ford XY</h2>
