--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </nav>
     </header>
     <!-- Hero image -->
-    <section id="hero" role="img" aria-label="A look inside the Retro car exhibition">
-        <!-- https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/Role_Img -->
+    <section id="hero-wrapper">
+        <div id="hero-image" role="img" aria-label="A look inside the Retro car exhibition"></div>
         <div id="cover-text">
             <h2>Vintage Cars</h2>
         </div>
@@ -50,58 +50,70 @@
             </ul>
         </nav>
     </aside>
-    <!-- Introduction content -->
-    <section id="intro">
-        <h2>Welcome to our vintage car exhibition portal</h2>
-        <p>We are proud to present our small but invaluable collection of one of the earliest
-            mass produced commercial vehicles.
-            Other than being retro, the driving experience greatly differs from today mainstream cars.
-        </p>
-        <p>Take a look at this quick take from bloomberg</p>
-        <iframe id="yt-video" src="https://www.youtube-nocookie.com/embed/MLMS_QtKamg?start=16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </section>
-    <!-- Historic timeline -->
-    <section id="history-timeline">
-        <h2>History and timeline</h2>
-        <!-- Emmet to describe current expected html structure: -->
-        <!-- article>(header>h3{subtitle})+(section>p{content}) -->
-        <article>
-            <header>
-                <h3>Before cars</h3>
-            </header>
-            <section>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi ducimus sit quo nesciunt possimus, reiciendis 
-                    earum magni placeat voluptate dolor, quaerat sed voluptas magnam quisquam quam repellat. Ducimus, assumenda ad!</p>
-            </section>
-        </article>
-        <article>
-            <header>
-                <h3>Transition</h3>
-            </header>
-            <section>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi cumque a voluptatem, ut, ullam distinctio, dolor 
-                    dolorum maxime minus aut consequatur? Laboriosam expedita ex temporibus debitis? Id, amet in? Temporibus!</p>
-            </section>
-        </article>
-        <article>
-            <header>
-                <h3>subtitle</h3>
-            </header>
-            <section>
-                <p>content</p>
-            </section>
-        </article>
-    </section>
-    <!-- Address and Map -->
-    <section id="address">
-        <code>
-            <strong>Address:</strong><br>
-            <em>Ballybough Rd,<br>
-            Dublin, Ireland</em>
-        </code>
-        <!-- Embedded map from Google, with an imaginary address -->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d607.6721570623787!2d-6.245479534081351!3d53.3596741714965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e60f64f8e19%3A0xa08cf78eff8de078!2sBallybough%20Rd%2C%20Ballybough%2C%20Dublin%2C%20Ireland!5e1!3m2!1sen!2suk!4v1634232912824!5m2!1sen!2suk" allowfullscreen="" loading="lazy"></iframe>        
-    </section>
+    <!-- Main content wrapper -->
+    <main>
+        <!-- Introduction content -->
+        <section id="intro">
+            <h2>Welcome to our vintage car exhibition portal</h2>
+            <p>We are proud to present our small but invaluable collection of one of the earliest
+                mass produced commercial vehicles.
+                Other than being retro, the driving experience greatly differs from today mainstream cars.
+            </p>
+            <p>Take a look at this quick take from bloomberg</p>
+            <iframe id="yt-video" src="https://www.youtube-nocookie.com/embed/MLMS_QtKamg?start=16"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </section>
+        <!-- Historic timeline -->
+        <section id="history-timeline">
+            <h2>History and timeline</h2>
+            <!-- Emmet to describe current expected html structure: -->
+            <!-- article>(header>h3{subtitle})+(section>p{content}) -->
+            <article>
+                <header>
+                    <h3>Before cars</h3>
+                </header>
+                <section>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi ducimus sit quo nesciunt
+                        possimus, reiciendis
+                        earum magni placeat voluptate dolor, quaerat sed voluptas magnam quisquam quam repellat.
+                        Ducimus, assumenda ad!</p>
+                </section>
+            </article>
+            <article>
+                <header>
+                    <h3>Transition</h3>
+                </header>
+                <section>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi cumque a voluptatem, ut, ullam
+                        distinctio, dolor
+                        dolorum maxime minus aut consequatur? Laboriosam expedita ex temporibus debitis? Id, amet in?
+                        Temporibus!</p>
+                </section>
+            </article>
+            <article>
+                <header>
+                    <h3>subtitle</h3>
+                </header>
+                <section>
+                    <p>content</p>
+                </section>
+            </article>
+        </section>
+        <!-- Address and Map -->
+        <section id="address">
+            <code>
+                <strong>Address:</strong><br>
+                <em>Ballybough Rd,<br>
+                    Dublin, Ireland</em>
+            </code>
+            <!-- Embedded map from Google, with an imaginary address -->
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d607.6721570623787!2d-6.245479534081351!3d53.3596741714965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e60f64f8e19%3A0xa08cf78eff8de078!2sBallybough%20Rd%2C%20Ballybough%2C%20Dublin%2C%20Ireland!5e1!3m2!1sen!2suk!4v1634232912824!5m2!1sen!2suk"
+                allowfullscreen="" loading="lazy"></iframe>
+        </section>
+    </main>
     <!-- Social Networks -->
     <footer>
         <ul id="social-networks">
