--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
         <!-- Introduction content -->
         <section id="intro">
             <h2>Welcome to our vintage car exhibition portal</h2>
-            <p>We are proud to present our small but invaluable collection of one of the earliest
-                mass produced commercial vehicles.
-                Other than being retro, the driving experience greatly differs from today mainstream cars.
-            </p>
-            <p>Take a look at this quick take from bloomberg</p>
-            <iframe id="yt-video" src="https://www.youtube-nocookie.com/embed/MLMS_QtKamg?start=16"
+            <div class="left-third">
+                <p>We are proud to present our small but invaluable collection of one of the earliest
+                    mass produced commercial vehicles.
+                    Other than being retro, the driving experience greatly differs from today mainstream cars.
+                </p>
+                <p>Take a look at this quick take from bloomberg</p>
+            </div>
+            <iframe class="right-two-third" id="yt-video" src="https://www.youtube-nocookie.com/embed/MLMS_QtKamg?start=16"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -103,19 +105,24 @@
         </section>
         <!-- Address and Map -->
         <section id="address">
-            <code>
-                <strong>Address:</strong><br>
-                <em>Ballybough Rd,<br>
-                    Dublin, Ireland</em>
-            </code>
+            <div class="left-third">
+                <code>
+                    <strong>Address:</strong><br>
+                    <em>Ballybough Rd,<br>
+                        Dublin, Ireland</em>
+                </code>
+            </div>
             <!-- Embedded map from Google, with an imaginary address -->
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d607.6721570623787!2d-6.245479534081351!3d53.3596741714965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e60f64f8e19%3A0xa08cf78eff8de078!2sBallybough%20Rd%2C%20Ballybough%2C%20Dublin%2C%20Ireland!5e1!3m2!1sen!2suk!4v1634232912824!5m2!1sen!2suk"
-                allowfullscreen="" loading="lazy"></iframe>
+            <div class="right-two-third">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d607.6721570623787!2d-6.245479534081351!3d53.3596741714965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e60f64f8e19%3A0xa08cf78eff8de078!2sBallybough%20Rd%2C%20Ballybough%2C%20Dublin%2C%20Ireland!5e1!3m2!1sen!2suk!4v1634232912824!5m2!1sen!2suk"
+                    allowfullscreen="" loading="lazy"></iframe>
+            </div>
         </section>
     </main>
     <!-- Social Networks -->
     <footer>
+        <hr class="hr-space">
         <ul id="social-networks">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener external" aria-label="Visit our facebook page (opens in new tab)">
