--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </nav>
     </aside>
     <!-- Main content wrapper -->
-    <main>
+    <main id="home-page">
         <!-- Introduction content -->
         <section id="intro">
             <h2>Welcome to our vintage car exhibition portal</h2>
@@ -121,8 +121,8 @@
         </section>
     </main>
     <!-- Social Networks -->
+    <hr class="hr-space">
     <footer>
-        <hr class="hr-space">
         <ul id="social-networks">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener external" aria-label="Visit our facebook page (opens in new tab)">
